[gd_scene load_steps=2 format=3 uid="uid://cusf0eprmxqmi"]

[ext_resource type="Script" path="res://Assets/Scene/UI/end_screen.gd" id="1_eagpv"]

[node name="EndScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_eagpv")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Victory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "____________
You survived 10 minutes
____________"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
disabled = true
text = "Restart"

[node name="HighscoreButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
disabled = true
text = "highscore"

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 45
disabled = true
text = "Quit"

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 1.5
one_shot = true
autostart = true
